@@ -112,5 +112,7 @@
 #define GSL_CONST_MKS_ROENTGEN (2.58e-4) /* A s / kg */
 #define GSL_CONST_MKS_RAD (1e-2) /* m^2 / s^2 */
 #define GSL_CONST_MKS_SOLAR_MASS (1.98892e30) /* kg */
+#define GSL_CONST_MKS_BOHR_RADIUS (5.291772083e-11) /* m */
+#define GSL_CONST_MKS_VACUUM_PERMITTIVITY (8.854187817e-12) /* A^2 s^4 / kg m^3 */
 
 #endif /* __GSL_CONST_MKS__ */
