@@ -1,3 +1,8 @@
+Tue Jan  8 21:48:56 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* const.el (gsl-constants): added bohr_radius and
+ 	vacuum_permittivity
+
 Tue Sep 25 15:15:33 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* const.el (fn): make all output double precision to avoid
